--- a/index.html
+++ b/index.html
@@ -3,24 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mosaïque de Couleurs</title>
+    <title>MosaMatic2</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container mt-4">
-        <h1 class="text-center">Générateur de Mosaïque</h1>
+    <div class="container mt-4 mb-5">
+        <h1 class="text-center mb-4">MosaMatic2</h1>
+
         <div class="row mb-3">
-            <div class="col">
-                <button id="randomBtn" class="btn btn-primary btn-block">Générer aléatoirement</button>
+            <div class="col-md-3 col-sm-6 mb-2">
+                <label for="color1">Couleur carré 1x1</label>
+                <input type="color" id="color1" value="#9d947d" class="form-control color-input">
             </div>
-            <div class="col">
-                <button id="clearBtn" class="btn btn-danger btn-block">Effacer</button>
+            <div class="col-md-3 col-sm-6 mb-2">
+                <label for="color2">Couleur carré 2x2</label>
+                <input type="color" id="color2" value="#dccbcc" class="form-control color-input">
             </div>
-            <div class="col">
-                <button id="exportBtn" class="btn btn-success btn-block">Exporter en PNG</button>
+            <div class="col-md-3 col-sm-6 mb-2">
+                <label for="color3">Couleur rectangle 1x2</label>
+                <input type="color" id="color3" value="#646d82" class="form-control color-input">
+            </div>
+            <div class="col-md-3 col-sm-6 mb-2">
+                <label for="color4">Couleur rectangle 2x1</label>
+                <input type="color" id="color4" value="#afc1c0" class="form-control color-input">
             </div>
         </div>
+
         <div class="row mb-3">
             <div class="col">
                 <input type="number" id="height" class="form-control" placeholder="Hauteur (H)" value="10">
@@ -29,7 +38,17 @@
                 <input type="number" id="width" class="form-control" placeholder="Largeur (L)" value="10">
             </div>
         </div>
-        <div id="mosaic-container" class="mt-4"></div>
+
+        <div class="row mb-4">
+            <div class="col">
+                <button id="randomBtn" class="btn btn-primary btn-block">Générer Mosaïque</button>
+            </div>
+            <div class="col">
+                <button id="exportBtn" class="btn btn-success btn-block">Exporter en PNG</button>
+            </div>
+        </div>
+
+        <div id="mosaic-container"></div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
