--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>MosaMatic2</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
@@ -13,38 +13,40 @@
 
         <div class="row mb-3">
             <div class="col-md-3 col-sm-6 mb-2">
-                <label for="color1">Couleur carré 1x1</label>
+                <label for="color1">Couleur 1x1</label>
                 <input type="color" id="color1" value="#9d947d" class="form-control color-input">
             </div>
             <div class="col-md-3 col-sm-6 mb-2">
-                <label for="color2">Couleur carré 2x2</label>
+                <label for="color2">Couleur 2x2</label>
                 <input type="color" id="color2" value="#dccbcc" class="form-control color-input">
             </div>
             <div class="col-md-3 col-sm-6 mb-2">
-                <label for="color3">Couleur rectangle 1x2</label>
+                <label for="color3">Couleur 1x2</label>
                 <input type="color" id="color3" value="#646d82" class="form-control color-input">
             </div>
             <div class="col-md-3 col-sm-6 mb-2">
-                <label for="color4">Couleur rectangle 2x1</label>
+                <label for="color4">Couleur 2x1</label>
                 <input type="color" id="color4" value="#afc1c0" class="form-control color-input">
             </div>
         </div>
 
         <div class="row mb-3">
             <div class="col">
-                <input type="number" id="height" class="form-control" placeholder="Hauteur (H)" value="10">
+                <label for="height">Hauteur</label>
+                <input type="number" id="height" class="form-control" placeholder="Hauteur (H)" value="6">
             </div>
             <div class="col">
-                <input type="number" id="width" class="form-control" placeholder="Largeur (L)" value="10">
+                <label for="width">Largeur</label>
+                <input type="number" id="width" class="form-control" placeholder="Largeur (L)" value="6">
             </div>
         </div>
 
         <div class="row mb-4">
             <div class="col">
-                <button id="randomBtn" class="btn btn-primary btn-block">Générer Mosaïque</button>
+                <button id="randomBtn" class="btn btn-primary btn-block">Génération de la mosaïque</button>
             </div>
             <div class="col">
-                <button id="exportBtn" class="btn btn-success btn-block">Exporter en PNG</button>
+                <button id="exportBtn" class="btn btn-success btn-block">Exportation de l'image</button>
             </div>
         </div>
 
