--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>MosaMatic2</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -43,10 +44,10 @@
 
         <div class="row mb-4">
             <div class="col">
-                <button id="randomBtn" class="btn btn-primary btn-block">Génération de la mosaïque</button>
+                <button id="exportBtn" type="button" class="btn btn-secondary w-100 mt-2">Exportation de l'image</button>
             </div>
             <div class="col">
-                <button id="exportBtn" class="btn btn-success btn-block">Exportation de l'image</button>
+                <button id="randomBtn" class="btn btn-primary w-100 mt-2">Génération de la mosaïque</button>
             </div>
         </div>
 
