--- a/index.html
+++ b/index.html
@@ -10,50 +10,59 @@
 </head>
 <body>
     <div class="container mt-4 mb-5">
-        <h1 class="text-center mb-4">MosaMatic2</h1>
-
-        <div class="row mb-3">
-            <div class="col-md-3 col-sm-6 mb-2">
-                <label for="color1">Couleur 1x1</label>
-                <input type="color" id="color1" value="#9d947d" class="form-control color-input">
-            </div>
-            <div class="col-md-3 col-sm-6 mb-2">
-                <label for="color2">Couleur 2x2</label>
-                <input type="color" id="color2" value="#dccbcc" class="form-control color-input">
-            </div>
-            <div class="col-md-3 col-sm-6 mb-2">
-                <label for="color3">Couleur 1x2</label>
-                <input type="color" id="color3" value="#646d82" class="form-control color-input">
-            </div>
-            <div class="col-md-3 col-sm-6 mb-2">
-                <label for="color4">Couleur 2x1</label>
-                <input type="color" id="color4" value="#afc1c0" class="form-control color-input">
-            </div>
-        </div>
-
-        <div class="row mb-3">
-            <div class="col">
-                <label for="height">Hauteur</label>
-                <input type="number" id="height" class="form-control" placeholder="Hauteur (H)" value="6">
-            </div>
-            <div class="col">
-                <label for="width">Largeur</label>
-                <input type="number" id="width" class="form-control" placeholder="Largeur (L)" value="6">
-            </div>
-        </div>
-
-        <div class="row mb-4">
-            <div class="col">
-                <button id="exportBtn" type="button" class="btn btn-secondary w-100 mt-2">Exportation de l'image</button>
-            </div>
-            <div class="col">
-                <button id="randomBtn" class="btn btn-primary w-100 mt-2">Génération de la mosaïque</button>
-            </div>
-        </div>
-
-        <div id="mosaic-container"></div>
+      <h1 class="text-center mb-4">MosaMatic2</h1>
+      <!---->
+      <div class="row mb-3">
+          <div class="col-md-3 col-sm-6 mb-2">
+              <label for="color1">Couleur 1x1</label>
+              <input type="color" id="color1" onchange="" value="#9d947d" class="form-control color-input">
+          </div>
+          <div class="col-md-3 col-sm-6 mb-2">
+              <label for="color2">Couleur 2x2</label>
+              <input type="color" id="color2" value="#dccbcc" class="form-control color-input">
+          </div>
+          <div class="col-md-3 col-sm-6 mb-2">
+              <label for="color3">Couleur 1x2</label>
+              <input type="color" id="color3" value="#646d82" class="form-control color-input">
+          </div>
+          <div class="col-md-3 col-sm-6 mb-2">
+              <label for="color4">Couleur 2x1</label>
+              <input type="color" id="color4" value="#afc1c0" class="form-control color-input">
+          </div>
+      </div>
+      <!---->
+      <div class="row mb-3">
+          <div class="col">
+              <label for="height">Hauteur</label>
+              <input type="number" id="height" class="form-control" placeholder="Hauteur (H)" value="6">
+          </div>
+          <div class="col">
+              <label for="width">Largeur</label>
+              <input type="number" id="width" class="form-control" placeholder="Largeur (L)" value="6">
+          </div>
+      </div>
+      <!--
+      <div class="row mb-1">
+          <div class="col">
+            <button id="saveBtn" type="button" class="btn btn-secondary w-100 mt-2">Sauvegarde de la mosaïque</button>
+          </div>
+          <div class="col">
+              <button id="fileInput" type="file" accept=".html,.txt" class="btn btn-secondary w-100 mt-2">Chargement de la mosaïque</button>
+          </div>
+      </div>
+      -->
+      <div class="row mb-4">
+          <div class="col">
+              <button id="exportBtn" type="button" class="btn btn-secondary w-100 mt-2">Exportation de l'image</button>
+          </div>
+          <div class="col">
+              <button id="randomBtn" class="btn btn-primary w-100 mt-2">Génération de la mosaïque</button>
+          </div>
+      </div>
+      <div id="mosaicContainer"></div>
+    <!---->
     </div>
-
+    <!---->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="script.js"></script>
