--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MosaMatic clasique</title>
+    <title>MosaMagic clasique</title>
     <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container-fluid mt-4 mb-5" style="position: relative; top: -20px;">
-      <h1 class="text-center" style="margin-bottom:0;"><span>MosaMatic</span></h1>
+      <h1 class="text-center" style="margin-bottom:0;"><span>MosaMagic</span></h1>
       <h6 class="text-center">Classique</h6>
       <!---->
       <div id="mosaicContainer"  style="position: relative; top: -20px;"></div>
